src/App.scss
@import url("https://fonts.googleapis.com/css2?family=Red+Rose&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  // overflow-x: hidden;
  // border: 1px solid red !important;
}
body {
  font-family: "Red Rose", cursive;
  color: #434343;
  background-color: #f5f5f5;
  width: 100vw;
}
.App {
  width: auto;
  display: block;

  //   padding: 2rem 4rem 0;

  //   border: 2px solid red;
}

